jira-integration/core/objects/Case/fields/JIRA_Issue_Id__c.field-meta.xml
<CustomField>
    <fullName>JIRA_Issue_Id__c</fullName>
    <externalId>true</externalId>
    <label>JIRA Issue Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>