jira-integration/core/objects/Case/fields/JIRA_Version_Id__c.field-meta.xml
<CustomField>
    <fullName>JIRA_Version_Id__c</fullName>
    <label>JIRA Version Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>